// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarshipClient setup 1`] = `
"Call: setConfig({"name":"starship","version":"v0.2.3","chains":[{"id":"osmosis-1","name":"osmosis","image":"pyramation/osmosis:v16.1.0","numValidators":1,"ports":{"rest":1317,"rpc":26657,"faucet":8007}},{"id":"cosmos-2","name":"cosmos","numValidators":1,"ports":{"rest":1313,"rpc":26653,"faucet":8003}}],"relayers":[{"name":"osmos-cosmos","type":"hermes","replicas":1,"chains":["osmosis-1","cosmos-2"]}],"registry":{"enabled":true,"ports":{"rest":8081,"grpc":9091}}})
Log: config again: [object Object]
Call: setup()
helm repo add starship https://hyperweb-io.github.io/starship/
helm repo update
helm search repo starship/devnet --version v0.2.3
Call: deploy()
Log: Installing the helm chart. This is going to take a while.....
helm install -f ../../__fixtures__/config.yaml osmojs starship/devnet --version v0.2.3 --timeout 10m
Log: Run "starship get-pods" to check the status of the cluster
Call: startPortForward()
Log: Attempting to stop any existing port-forwards...
Log: Trying to stop all port-forward, if any....
ps -ef | grep -i 'kubectl port-forward' | grep -v 'grep' | awk '{print $2}'
sleep 2
Log: Starting new port forwarding...
kubectl port-forward pods/osmosis-1-genesis-0 26657:26657 > /dev/null 2>&1 &
Log: Forwarded osmosis-1: local 26657 -> target (host) 26657
kubectl port-forward pods/osmosis-1-genesis-0 1317:1317 > /dev/null 2>&1 &
Log: Forwarded osmosis-1: local 1317 -> target (host) 1317
kubectl port-forward pods/osmosis-1-genesis-0 8007:8000 > /dev/null 2>&1 &
Log: Forwarded osmosis-1: local 8007 -> target (host) 8000
kubectl port-forward pods/cosmos-2-genesis-0 26653:26657 > /dev/null 2>&1 &
Log: Forwarded cosmos-2: local 26653 -> target (host) 26657
kubectl port-forward pods/cosmos-2-genesis-0 1313:1317 > /dev/null 2>&1 &
Log: Forwarded cosmos-2: local 1313 -> target (host) 1317
kubectl port-forward pods/cosmos-2-genesis-0 8003:8000 > /dev/null 2>&1 &
Log: Forwarded cosmos-2: local 8003 -> target (host) 8000
kubectl port-forward service/registry 8081:8080 > /dev/null 2>&1 &
Log: Forwarded registry on port 8081 to target port 8080
kubectl port-forward service/registry 9091:9090 > /dev/null 2>&1 &
Log: Forwarded registry on port 9091 to target port 9090
Call: stop()
Log: Trying to stop all port-forward, if any....
ps -ef | grep -i 'kubectl port-forward' | grep -v 'grep' | awk '{print $2}'
sleep 2
kubectl get pods --no-headers -o custom-columns=:metadata.name
helm delete osmojs
kubectl get pods --no-headers -o custom-columns=:metadata.name
Log: All pods have been sucessfully terminated!"
`;

exports[`StarshipClient setup 2`] = `
"helm repo add starship https://hyperweb-io.github.io/starship/
helm repo update
helm search repo starship/devnet --version v0.2.3
helm install -f ../../__fixtures__/config.yaml osmojs starship/devnet --version v0.2.3 --timeout 10m
ps -ef | grep -i 'kubectl port-forward' | grep -v 'grep' | awk '{print $2}'
sleep 2
kubectl port-forward pods/osmosis-1-genesis-0 26657:26657 > /dev/null 2>&1 &
kubectl port-forward pods/osmosis-1-genesis-0 1317:1317 > /dev/null 2>&1 &
kubectl port-forward pods/osmosis-1-genesis-0 8007:8000 > /dev/null 2>&1 &
kubectl port-forward pods/cosmos-2-genesis-0 26653:26657 > /dev/null 2>&1 &
kubectl port-forward pods/cosmos-2-genesis-0 1313:1317 > /dev/null 2>&1 &
kubectl port-forward pods/cosmos-2-genesis-0 8003:8000 > /dev/null 2>&1 &
kubectl port-forward service/registry 8081:8080 > /dev/null 2>&1 &
kubectl port-forward service/registry 9091:9090 > /dev/null 2>&1 &
ps -ef | grep -i 'kubectl port-forward' | grep -v 'grep' | awk '{print $2}'
sleep 2
kubectl get pods --no-headers -o custom-columns=:metadata.name
helm delete osmojs
kubectl get pods --no-headers -o custom-columns=:metadata.name"
`;
